--- a/_css/website-v1.css
+++ b/_css/website-v1.css
@@ -118,7 +118,6 @@ body {
 
 .navbar3-ws {
     position: sticky;
-    top: 46;
     width: 20%;
     background-color: #ebf5fa;
     overflow-y: scroll;
@@ -131,6 +130,7 @@ body {
 
 .main-content-ws {
     width: 65%;
+    height: 1500px;
 }
 
 .footer-ws {
@@ -143,6 +143,13 @@ body {
 
 .navbar3-ws a:not(.main) {
     margin: 5px 0;
+}
+
+.sticky-ws {
+    border: 1px solid seagreen;
+    display: block;
+    position: sticky;
+    top: 0;
 }
 
 .navbar3-ws a {
@@ -158,4 +165,22 @@ body {
     font-size: 1.5em;
     margin-bottom: 10px;
     margin-top: 20px;
+}
+
+.dropdown-content-ws a {
+    float: right;
+    width: 90%;
+    border: 1px solid green;
+}
+
+.dropdown-content-ws {
+    display: none;
+}
+
+.navbar3-ws a:hover:not(.main) .dropdown-content-ws {
+    display: block;
+}
+
+.navbar2-ws a:hover {
+    background-color: navy;
 }
