--- a/_mdn-study/_html-study/_css/_practicing/web-forms-practice.css
+++ b/_mdn-study/_html-study/_css/_practicing/web-forms-practice.css
@@ -87,15 +87,15 @@ textarea {
 }
 
 /* How to structure a web form */
+/* Runs in all forms */
+.example3, .example3 fieldset, .example4, .example4 fieldset, .example5, .example5 fieldset {
+    margin: 0 auto 2rem auto;
+}
+
 /* First form */
 
 .example3 {
     width: 35rem;
-    margin: 0 auto 2rem auto;
-}
-
-.example3 fieldset {
-    margin: 0 auto 2rem auto;
 }
 
 .example3 label {
@@ -105,4 +105,80 @@ textarea {
 
 .example3 input, .example3 label {
     display: inline-block;
+}
+
+.example3 p {
+    text-indent: auto;
+}
+
+/* Second form and third form */
+
+.example4, .example5 {
+    width: 35rem;
+    padding: 2rem;
+}
+
+.example4 {
+    border: 1px solid gray;
+    border-radius: 1rem;
+}
+
+/* Fourth form */
+.example6 .contact p {
+    text-indent: 0;
+}
+
+.example6 h1, .example6 h2, .example6 h3, .example6 {
+    counter-reset: none;
+}
+
+.example6 h1::before, .example6 h2::before, .example6 h3::before, .example6 h4::before {
+    counter-increment: none;
+    content: none;
+}
+
+.example6 {
+    padding: 2rem;
+    border: 1px solid gray;
+    border-radius: 1rem;
+    width: 50rem;
+    margin: 0 auto;
+}
+
+.example6 li {
+    list-style-type: none;
+}
+
+.example6 .contact p {
+    padding-left: 7rem;
+}
+
+.example6 label, .example6 input {
+    display: inline-block;
+}
+
+.example6 .contact label {
+    text-align: left;
+    width: 8rem;
+}
+
+
+.example6 .contact fieldset, .example6 .contact input:not(.contact fieldset input), .example6 .interest fieldset  {
+    float: right;
+    
+}
+
+.example6 fieldset {
+    width: 40rem;
+    margin: 0 0 2rem 0;
+}
+
+.contact p input {
+    width: 33rem;
+}
+
+.example6 button {
+    display: block;
+    padding: 0.5rem;
+    margin: 0 auto;
 }
