--- a/_mdn-study/_html-study/_css/_practicing/web-forms-practice.css
+++ b/_mdn-study/_html-study/_css/_practicing/web-forms-practice.css
@@ -138,7 +138,7 @@ textarea {
     text-indent: 0;
 }
 
-.example6 h1, .example6 h2, .example6 h3, .example6 {
+.example6 body, .example6 h1, .example6 h2, .example6 h3 {
     counter-reset: none;
 }
 
@@ -206,7 +206,7 @@ textarea {
     counter-reset: none;
 }
 
-.example7 body::before, .example7 h1::before, .example7 h2::before, .example7 h3::before, .example7 h4::before {
+.example7 h1::before, .example7 h2::before, .example7 h3::before, .example7 h4::before {
     counter-increment: none;
     content: none;
 }
@@ -252,7 +252,7 @@ textarea {
     counter-reset: none;
 }
 
-.example8 body, .example8 h1::before, .example8 h2::before, .example8 h3::before, .example8 h4::before {
+.example8 h1::before, .example8 h2::before, .example8 h3::before, .example8 h4::before {
     counter-increment: none;
     content: none;
 }
@@ -308,7 +308,7 @@ textarea {
     counter-reset: none;
 }
 
-.example9 body::before, .example9 h1::before, .example9 h2::before, .example9 h3::before, .example9 h4::before {
+.example9 h1::before, .example9 h2::before, .example9 h3::before, .example9 h4::before {
     counter-increment: none;
     content: none;
 }
@@ -329,7 +329,7 @@ textarea {
     counter-reset: none;
 }
 
-.example10 body::before, .example10 h1::before, .example10 h2::before, .example10 h3::before, .example10 h4::before {
+.example10 h1::before, .example10 h2::before, .example10 h3::before, .example10 h4::before {
     counter-increment: none;
     content: none;
 }
@@ -350,7 +350,7 @@ textarea {
     counter-reset: none;
 }
 
-.example11 body::before, .example11 h1::before, .example11 h2::before, .example11 h3::before, .example11 h4::before {
+.example11 h1::before, .example11 h2::before, .example11 h3::before, .example11 h4::before {
     counter-increment: none;
     content: none;
 }
@@ -407,6 +407,28 @@ textarea {
 }
 
 /* The HTML5 input types */
+/* Runs in more than one form */
+
+.example15, .example16, .example17, .example18  {
+    border: 1px solid gray;
+    border-radius: 1rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.example15 li, .example16 li, .example17 li, .example18 li {
+    list-style-type: none;
+}
+
+.example15 body, .example15 h1, .example15 h2, .example15 h3, .example16 body, .example16 h1, .example16 h2, .example16 h3, .example17 body, .example17 h1, .example17 h2, .example17 h3, .example18 body, .example18 h1, .example18 h2, .example18 h3 {
+    counter-reset: none;
+}
+
+.example15 h1::before, .example15 h2::before, .example15 h3::before, .example16 h1::before, .example16 h2::before, .example16 h2::before, .example16 h3::before, .example17 h1::before, .example17 h2::before, .example17 h2::before, .example17 h3::before, .example18 h1::before, .example18 h2::before, .example18 h2::before, .example18 h3::before  {
+    counter-increment: none;
+    content: none;
+}
+
 /* First form */
 .example14 h1, .example14 h2, .example14 h3 {
     counter-reset: none;
@@ -459,4 +481,75 @@ textarea {
 
 .example14 input, .example14 li {
     float: right;
+}
+
+/* Second form */
+
+.example15 body, .example15 h1, .example15 h2, .example15 h3 {
+    counter-reset: none;
+}
+
+.example15 h1::before, .example15h2::before, .example15 h2::before, .example15 h3::before {
+    counter-increment: none;
+    content: none;
+}
+
+.example15 {
+    width: 40rem;
+}
+    
+.example15 ul {
+    padding: 0;
+    margin: 0;
+}
+
+/* Third form */
+
+.example16 {
+    width: 40rem;
+}
+
+.example16 button {
+    display: block;
+    padding: 0.5rem;
+    margin: 2rem auto;
+}
+
+/* Fourth form */
+
+.example17 {
+    width: 60rem;
+}
+
+.example17 label, .example17 input {
+    display: inline-block;
+}
+
+.example17 li {
+    margin: 2rem;
+}
+
+.example17 fieldset {
+    width: 45rem;
+    margin: 2rem auto;
+}
+
+.example17 label {
+    width: 8rem;
+}
+
+.example17 input {
+    width: 35rem;
+}
+
+.example17 p {
+    text-indent: 0;
+    overflow: hidden;
+    text-align: center;
+}
+
+.example17 button {
+    display: inline-block;
+    padding: 0.5rem;
+    margin: 0 2rem;
 }
